--- a/html_files/contact.html
+++ b/html_files/contact.html
@@ -252,17 +252,19 @@
                         class="px-3 py-3 text-slate-600 relative bg-white bg-white text-sm border border-gray-700 h-10 w-full hover:border-black focus:outline-none "
                         required />
                 </div>
-                <div class="flex flex-col pb-6">
+                <div class="flex flex-col">
                     <label class="text-lg sm:text-xl">Do You Have IELTS?</label><br>
-                    <div class="flex items-center mb-4">
-                        <input id="default-radio-1" type="radio" value="Yes" name="IELTS"
-                            class="w-6 h-6 text-blue-600 bg-gray-100 border-gray-700" required>
-                        <label for="default-radio-1" class="ml-2 text-lg text-gray-900 dark:text-gray-300">Yes</label>
-                    </div>
-                    <div class="flex items-center mb-4">
-                        <input id="default-radio-1" type="radio" value="No" name="IELTS"
-                            class="w-6 h-6 text-blue-600 bg-gray-100 border-gray-700" required>
-                        <label for="default-radio-1" class="ml-2 text-lg text-gray-900 dark:text-gray-300">No</label>
+                    <div class="flex space-x-6">
+                        <div class="flex items-center mb-4">
+                            <input id="default-radio-1" type="radio" value="Yes" name="IELTS"
+                                class="w-6 h-6 text-blue-600 bg-gray-100 border-gray-700" required>
+                            <label for="default-radio-1" class="ml-2 text-lg text-gray-900 dark:text-gray-300">Yes</label>
+                        </div>
+                        <div class="flex items-center mb-4">
+                            <input id="default-radio-1" type="radio" value="No" name="IELTS"
+                                class="w-6 h-6 text-blue-600 bg-gray-100 border-gray-700" required>
+                            <label for="default-radio-1" class="ml-2 text-lg text-gray-900 dark:text-gray-300">No</label>
+                        </div>
                     </div>
                 </div>
                 <div class="flex flex-col pb-6">
